--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         vr-mode-ui="enabled: false"
 		embedded
         arjs='sourceType: webcam; debugUIEnabled: false;'>
-        <a-entity look-at="[gps-camera]" gltf-model="./assets/magnemite/scene.gltf" scale="120 120 120" gps-entity-place="longitude: 42.594760; latitude: -71.222500;" animation-mixer/>
+        <a-entity gltf-model="./assets/magnemite/scene.gltf" scale="120 120 120" gps-entity-place="longitude: 42.594760; latitude: -71.222500;" animation-mixer/>
         <a-camera gps-camera rotation-reader></a-camera>
 	</a-scene>
 </body>
